--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.6",
+    "vue3-click-away": "^1.2.4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
